@@ -1,3 +1,8 @@
+2005-03-21  Stefan Seefeld  <stefan@codesourcery.com>
+
+	* qm/test/classes/command.py: Generalize ExecTestBase's output
+	validation.
+
 2005-03-20  Stefan Seefeld  <stefan@codesourcery.com>
 
 	* qm/test/classes/xml_database.py: Fix ExplicitSuite constructor call.
